--- a/views/create_kanban_out.ejs
+++ b/views/create_kanban_out.ejs
@@ -112,7 +112,7 @@
                         <td>
                             <input type="text" id="qr_prod" name="qr_prod" value="<%= row.qr_prod %>" readonly>
                         </td>
-                        <td>
+                        <td style="border: 3px solid green;">
                             <input type="text" id="qr_kanban_out" name="qr_kanban_out" value="<%= row.qr_kanban_out %>" readonly>
                         </td>
                         <td>
