--- a/views/admin_page.ejs
+++ b/views/admin_page.ejs
@@ -7,14 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="header">
-        <a href="/admin_page">Home</a>
-        <a href="/admin_page/master_main">Master Main</a>
-        <a href="/admin_page/master_setting">Master Setting</a>
-        <a href="/admin_page/receive_scan_master">Receive Scan</a>
-        <a href="/dnth_data">DNTH Data</a>
-        <a href="/logout">Logout</a>
-    </div>
+    <%- include('sub_views/header') %>
 
     <table class="table">
         <tr>
