--- a/views/master_edit.ejs
+++ b/views/master_edit.ejs
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <%- include('sub_views/header') %>
+
     <div>
         <h1>Edit Master Packing List Parameters</h1>
     </div>
