--- a/views/master_setting.ejs
+++ b/views/master_setting.ejs
@@ -12,17 +12,7 @@
     </style>
 </head>
 <body>
-    <div class="header">
-        <a href="/admin_page">Home</a>
-        <a href="/admin_page/master_main">Master Main</a>
-        <a href="/admin_page/master_setting">Master Setting</a>
-        <a href="/admin_page/receive_scan_master">Receive Scan</a>
-        <a href="/dnth_data">DNTH Data</a>
-        <a href="/pc_page">PC Page</a>
-        <a href="/prod_page">PD Page</a>
-        <a href="/create_pl">Create PL</a>
-        <a href="/logout">Logout</a>
-    </div>
+    <%- include('sub_views/header') %>
 
     <div>
         <h1>Add Master Packing List</h1>
