--- a/views/create_kanban_out.ejs
+++ b/views/create_kanban_out.ejs
@@ -8,19 +8,16 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
+    <style>
+      .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+    </style>
   </head>
   <body>
-    <div class="header">
-      <a href="/admin_page">Home</a>
-      <a href="/admin_page/master_main">Master Main</a>
-      <a href="/admin_page/master_setting">Master Setting</a>
-      <a href="/admin_page/receive_scan_master">Receive Scan</a>
-      <a href="/dnth_data">DNTH Data</a>
-      <a href="/pc_page">PC Page</a>
-      <a href="/prod_page">PD Page</a>
-      <a href="/create_kanban_out">Create KB Out</a>
-      <a href="/logout">Logout</a>
-    </div>
+    <%- include('sub_views/header') %>
 
     <form action="/create_kanban_out/submit" method="POST">
         <div>
