--- a/views/dnth_data.ejs
+++ b/views/dnth_data.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DNTH DATA</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <style>
         /* h1 {
@@ -17,7 +17,7 @@
     <div>
         <h1>DNTH Data Table</h1>
     </div>
-    
+
     <table class="table">
         <thead>
             <tr>
