--- a/views/master_setting.ejs
+++ b/views/master_setting.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MASTER SETTING (ADMIN)</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <style>
         /* h1 {
@@ -13,6 +13,8 @@
 </head>
 <body>
     <%- include('sub_views/header') %>
+
+    <a href="/master_setting/pn_setting" target="_blank">Setting Part number</a>
 
     <div>
         <h1>Add Master Packing List</h1>
