--- a/views/sub_views/header.ejs
+++ b/views/sub_views/header.ejs
@@ -73,15 +73,15 @@
     </style>
 
 <div class="header">
-    <a class="home" target="_blank" href="/admin_page">Home</a>
-    <a class="home" target="_blank" href="/admin_page/master_main">Master Main</a>
-    <a class="home" target="_blank" href="/admin_page/master_setting">Master Setting</a>
-    <a class="home" target="_blank" href="/admin_page/receive_scan_master">Receive Scan</a>
-    <a class="home" target="_blank" href="/dnth_data">DNTH Data</a>
-    <a class="home" target="_blank" href="/pc_page">PC Page</a>
+    <a class="home" href="/admin_page">Home</a>
+    <a class="home" href="/admin_page/master_main">Master Main</a>
+    <a class="home" href="/admin_page/master_setting">Master Setting</a>
+    <a class="home" href="/admin_page/receive_scan_master">Receive Scan</a>
+    <a class="home" href="/dnth_data">DNTH Data</a>
+    <a class="home" href="/pc_page">PC Page</a>
     <!-- <a class="home" target="_blank" href="/prod_page">PD Page</a> -->
-    <a class="home" target="_blank" href="/prod_in_new">PD IN</a>
-    <a class="home" target="_blank" href="/prod_out_new">PD OUT</a>
+    <a class="home" href="/prod_in_new">PD IN</a>
+    <a class="home" href="/prod_out_new">PD OUT</a>
     <!-- <div class="dropdown">
         <button class="home">PD</button>
         <div class="dropdown-content">
@@ -89,8 +89,8 @@
             <a class="drop-item" target="_blank" href="/prod_out_new">PD OUT</a>
         </div>
     </div> -->
-    <a class="home" target="_blank" href="/create_kanban_out">Create KB Out</a>
-    <a class="home" target="_blank" href="/create_pl">Create PL</a>
+    <a class="home" href="/create_kanban_out">Create KB Out</a>
+    <a class="home" href="/create_pl">Create PL</a>
     <a class="home" href="/logout">Logout</a>
 </div>
 
