--- a/views/sub_views/header.ejs
+++ b/views/sub_views/header.ejs
@@ -5,7 +5,7 @@
       align-items: center;
       /* border: 3px solid black; */
       background-color: rgb(168, 4, 4);
-      margin-bottom: 5vh;
+      margin-bottom: 5px;
     }
     .home {
         padding: 20px 25px;
@@ -45,6 +45,11 @@
 
     .dropdown-item {
         margin: 10px 0 10px 0;
+    }
+
+    input[readonly] {
+      background-color: rgb(199, 199, 199);
+      cursor: default;
     }
 
 
@@ -90,7 +95,7 @@
         </div>
     </div> -->
     <a class="home" href="/create_kanban_out">Create KB Out</a>
-    <a class="home" href="/create_pl">Create PL</a>
+    <a class="home" href="/create_pl_new">Create PL</a>
     <a class="home" href="/logout">Logout</a>
 </div>
 
